--- a/login.css
+++ b/login.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #535353;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@ body {
 }
 
 .login-container {
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -38,7 +38,7 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #b34100;
+    background-color: #0056b3;
     color: white;
     border: none;
     border-radius: 5px;
